# Complier-Characteristics

./: .gitignore  README.md  pyproject.toml
examples/: estimate_complier_means_from_dataframe.py
src/complier_characteristics/: __init__.py  api.py  data.py  diagnostics.py  estimators.py  nuisance.py  results.py
tests/: test_api_results.py  test_data.py  test_estimators.py  test_nuisance.py
