[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "complier-characteristics"
version = "0.1.0"
description = "Readable estimators for complier characteristics under binary IV designs."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "statsmodels>=0.14"]
keywords = ["causal inference", "instrumental variables", "late", "compliers"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
